@@ -43,21 +43,42 @@ sourceSets {
             srcDir "src/bench/java"
         }
     }
+    kvsIntegrationTest {
+        java {
+            compileClasspath += main.output + test.output
+            runtimeClasspath += main.output + test.output
+            srcDir "src/inttest/java"
+        }
+        resources.srcDir file('src/inttest/resources')
+    }
 }
-application {
-    applicationName = 'TransactionBench'
-    mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.TransactionBench'
+
+configurations {
+    kvsIntegrationTestImplementation.extendsFrom testImplementation
+    kvsIntegrationTestRuntime.extendsFrom testRuntime
+}
+
+task kvsIntegrationTest(type: Test) {
+    systemProperty 'tsurugi.kvstest.endpoint', 'ipc:tsurugi'
+    dependsOn ':tsubakuro-ipc:assemble'
+    systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/lib/libtsubakuro.so"
+    useJUnitPlatform()
+    testClassesDirs = sourceSets.kvsIntegrationTest.output.classesDirs
+    classpath = sourceSets.kvsIntegrationTest.runtimeClasspath
+    outputs.upToDateWhen { false }
 }
 
 application {
-    applicationName = 'RealTransactionTest'
-    mainClass = 'com.tsurugidb.tsubakuro.kvs.realbench.RealTransactionTest'
+    applicationName = 'YCSBlikeBench'
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.ycsb.YCSBlikeBenchmark'
+	// see modules/kvs/build/distributions/YCSBlikeBench-xxx.zip
 }
 
 tasks.register('runShortMockBench', JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.TransactionBench'
     jvmArgs = ['-Xmx1024M']
+    args = ['1,2,4,8', '10', '30', '100000']
 }
 
 tasks.register('runFullMockBench', JavaExec) {
@@ -73,6 +94,7 @@ tasks.register('runShortBench', JavaExec) {
     systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/lib/libtsubakuro.so"
     mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.RealTransactionBench'
     jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
+    args = ['short', 'ipc:tsurugi', 'sameTable']
 }
 
 tasks.register('runTestBench', JavaExec) {
@@ -81,6 +103,7 @@ tasks.register('runTestBench', JavaExec) {
     systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/lib/libtsubakuro.so"
     mainClass = 'com.tsurugidb.tsubakuro.kvs.realbench.RealTransactionTest'
     jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
+    args = ['ipc:tsurugi']
 }
 
 tasks.register('runFullBench', JavaExec) {
@@ -107,7 +130,34 @@ tasks.register('runMultiEmptyMessageBench', JavaExec) {
     systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/lib/libtsubakuro.so"
     mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.EmptyMessageBench'
     jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
-    args = ['ipc:tsurugi', '1,2,4,8,16,32,64,100', '10', '30']
+    args = ['ipc:tsurugi', '1,2,4,8', '10', '30']
+}
+
+tasks.register('runYCSBlikeBenchCreateDB', JavaExec) {
+    dependsOn ':tsubakuro-ipc:assemble'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/libtsubakuro.so"
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.ycsb.YCSBlikeBenchmark'
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
+    args = ['ipc:tsurugi', '8', 'createDB']
+}
+
+tasks.register('runYCSBlikeBench', JavaExec) {
+    dependsOn ':tsubakuro-ipc:assemble'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/libtsubakuro.so"
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.ycsb.YCSBlikeBenchmark'
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
+    args = ['ipc:tsurugi', '1,2,4,8', '50', '10', '30']
+}
+
+tasks.register('runYCSBlikeBenchBySql', JavaExec) {
+    dependsOn ':tsubakuro-ipc:assemble'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/libtsubakuro.so"
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.ycsb.YCSBlikeBenchmark'
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M', '-DuseSqlClient=true']
+    args = ['ipc:tsurugi', '1,2,4,8', '50', '10', '30']
 }
 
 test {
